--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Practical02</module>
         <module>Practical01</module>
+        <module>Seminar02</module>
     </modules>
 
     <dependencies>
