--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Practical01</module>
         <module>Seminar02</module>
         <module>Seminar03</module>
+        <module>Practical03</module>
     </modules>
 
     <dependencies>
