--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>Seminar02</module>
         <module>Seminar03</module>
         <module>Practical03</module>
+        <module>Seminar04</module>
+        <module>Practical04</module>
     </modules>
 
     <dependencies>
